# real-phased-tqs

./: .gitignore  README.md  main.py  pyproject.toml
.githooks/: pre-commit
hamiltonian/: hamiltonian.py  ising_three_spin.py  symmetries.py  transverse_field_ising.py  transverse_field_ising_y.py
model/: README.md  loss_utils.py  pauli_observables.py  tqs.py
notebooks/: embedding.ipynb  exact_diagonalization.ipynb  parameters.ipynb  test_forward_pass.ipynb
scripts/: benchmark_sampler.py  check_cuda.py  init_precommit.sh  install_prettier.sh  run_magnetization_sweep.sh
scripts/reports/: plot_magnetization_3d.py  plot_magnetization_vs_h.py  plot_training_curves.py  wandb_utils.py
training/: training_loop.py
